--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\ko092\\Anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\kazu0920\\anaconda3\\python.exe"
 }
